# Junction_2025

./: .flutter-plugins-dependencies  .gitignore  README.md  pubspec.yaml
.dart_tool/: package_config.json  package_graph.json
.dart_tool/dartpad/: web_plugin_registrant.dart
.dart_tool/flutter_build/: dart_plugin_registrant.dart
.dart_tool/flutter_build/6beb7227a1fd3b7b5192e161bd16f952/: .filecache  IssueLaunchRootViewControllerAccess.stamp  dart_build.d  dart_build.stamp  dart_build_result.json  debug_unpack_ios.stamp  (+10 more)
android/app/: build.gradle.kts
assets/: VI_avatar.mov
backend/: .dockerignore  .env.example  Dockerfile  README.md  dependencies.py  firestore_helpers.py  gemini_helpers.py  main.py  pyproject.toml  requirements.txt
backend/scripts/: import_content.py
docs/: gemini_integration.md  research_notes.md  sample_content.json  transaction_categorization.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: activity_page.dart  aes_helper.dart  airplane_booking_page.dart  badges_page.dart  budget_course_page.dart  budget_quiz_page.dart  community_page.dart  expense_page.dart  goals_page.dart  home_page.dart  learning_path_page.dart  login_page.dart  main.dart  monthly_challenge_page.dart  qr_scanner_page.dart  quiz_page.dart  spending_sandbox_page.dart  ticket_page.dart
lib/widgets/: avatar_widget.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+5 files in other folders)
